hphp/hack/test/typecheck/dict/supports_unset.php.like_types.exp
File "supports_unset.php", line 4, characters 3-17:
In strict mode, unset is banned except on array, keyset, or dict indexing (Typing[4135])
File "supports_unset.php", line 3, characters 14-33:
This is a dynamic value or an object of type dict<string, string> because it is an unenforceable type
