hphp/hack/test/typecheck/dict/supports_unset.php
<?hh // strict

function foo(dict<string, string> $x): void {
  unset($x['a']);
}
